force-app/main/default/objects/Product2/fields/Added_by_ATG_For_MVP__c.field-meta.xml
<CustomField>
        <fullName>Added_by_ATG_For_MVP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate that this was a new product added into this environment for MVP</description>
        <inlineHelpText>Flag to indicate that this was a new product added into this environment for MVP</inlineHelpText>
        <label>Added by ATG For MVP</label>
        <type>Checkbox</type>
    </CustomField>