force-app/main/default/objects/Product2/fields/Asset_Created_for_Product__c.field-meta.xml
<CustomField>
        <fullName>Asset_Created_for_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is set on the product an asset will be created or updated once the product is sold</description>
        <inlineHelpText>When this flag is set on the product an asset will be created or updated once the product is sold</inlineHelpText>
        <label>Asset Created for Product</label>
        <type>Checkbox</type>
    </CustomField>