force-app/main/default/objects/Product2/fields/Asset_Name__c.field-meta.xml
<CustomField>
        <fullName>Asset_Name__c</fullName>
        <description>Name used in place of the product once an asset is created from the Opportunity Line Item</description>
        <label>Asset Name</label>
        <type>TextArea</type>
    </CustomField>