force-app/main/default/objects/Product2/fields/ATG_Pricing_Method__c.field-meta.xml
<CustomField>
        <fullName>ATG_Pricing_Method__c</fullName>
        <label>ATG Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price Glossary</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>