force-app/main/default/objects/Product2/fields/ATG_Test_Product__c.field-meta.xml
<CustomField>
        <fullName>ATG_Test_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the product being created is a test product and should not be pushed to FinDev.</description>
        <inlineHelpText>Check this box if the product being created is a test product and should not be pushed to FinDev.</inlineHelpText>
        <label>ATG Test Product</label>
        <type>Checkbox</type>
    </CustomField>