force-app/main/default/objects/Product2/fields/Authorised_Position_Type__c.field-meta.xml
<CustomField>
        <fullName>Authorised_Position_Type__c</fullName>
        <label>Authorised Position Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SPU</fullName>
                </value>
                <value>
                    <fullName>CPU Core</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Named</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>