force-app/main/default/objects/Product2/fields/Available_for_Existing__c.field-meta.xml
<CustomField>
        <fullName>Available_for_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is set, additional units of the product can be sold to existing customers</description>
        <inlineHelpText>When this flag is set, additional units of the product can be sold to existing customers</inlineHelpText>
        <label>Available for Existing</label>
        <type>Checkbox</type>
    </CustomField>