force-app/main/default/objects/Product2/fields/Available_for_Net_New__c.field-meta.xml
<CustomField>
        <fullName>Available_for_Net_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is set the product is available to be sold to new customers</description>
        <inlineHelpText>When this flag is set the product is available to be sold to new customers</inlineHelpText>
        <label>Available for Net New</label>
        <type>Checkbox</type>
    </CustomField>