force-app/main/default/objects/Product2/fields/Base_Product__c.field-meta.xml
<CustomField>
        <fullName>Base_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XXXBase Product</label>
        <type>Checkbox</type>
    </CustomField>