force-app/main/default/objects/Product2/fields/Beam__c.field-meta.xml
<CustomField>
        <fullName>Beam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beam</label>
        <type>Checkbox</type>
    </CustomField>