force-app/main/default/objects/Product2/fields/Bundle2__c.field-meta.xml
<CustomField>
        <fullName>Bundle2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundle</label>
        <type>Checkbox</type>
    </CustomField>