force-app/main/default/objects/Product2/fields/Bundle_Product_Name__c.field-meta.xml
<CustomField>
        <fullName>Bundle_Product_Name__c</fullName>
        <label>Bundle Product Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>