force-app/main/default/objects/Product2/fields/Business_Area_Scope__c.field-meta.xml
<CustomField>
        <fullName>Business_Area_Scope__c</fullName>
        <label>Business Area Scope</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>