force-app/main/default/objects/Product2/fields/Contract_Name__c.field-meta.xml
<CustomField>
        <fullName>Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>