force-app/main/default/objects/Product2/fields/Cost_Method__c.field-meta.xml
<CustomField>
        <fullName>Cost_Method__c</fullName>
        <label>Cost Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>FIFO</fullName>
                </value>
                <value>
                    <fullName>LIFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>