force-app/main/default/objects/Product2/fields/Cost_Percentage__c.field-meta.xml
<CustomField>
        <fullName>Cost_Percentage__c</fullName>
        <label>Cost Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>