force-app/main/default/objects/Product2/fields/Costing_Method__c.field-meta.xml
<CustomField>
        <fullName>Costing_Method__c</fullName>
        <description>Used to identify whether the services product using fixed pricing or percentage cost pricing.</description>
        <inlineHelpText>Used to identify whether the services product using fixed pricing or percentage cost pricing.</inlineHelpText>
        <label>Costing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                    <default>true</default>
                    <label>Fixed Price</label>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>