force-app/main/default/objects/Product2/fields/Countries_Priced__c.field-meta.xml
<CustomField>
        <fullName>Countries_Priced__c</fullName>
        <description>Used for pricing products such as Total Treasury where pricing is based on the number of countries quoted for</description>
        <inlineHelpText>Used for pricing products such as Total Treasury where pricing is based on the number of countries quoted for</inlineHelpText>
        <label>Countries Priced</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>