force-app/main/default/objects/Product2/fields/Date_Created__c.field-meta.xml
<CustomField>
        <fullName>Date_Created__c</fullName>
        <description>Date on which the product was created</description>
        <inlineHelpText>Date on which the product was created</inlineHelpText>
        <label>Date Created</label>
        <type>Date</type>
    </CustomField>