force-app/main/default/objects/Product2/fields/Disable_Proration__c.field-meta.xml
<CustomField>
        <fullName>Disable_Proration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to remove CPQ Standard Proration calculation at the time of quoting.</description>
        <inlineHelpText>Used to remove CPQ Standard Proration calculation at the time of quoting.</inlineHelpText>
        <label>Disable Proration</label>
        <type>Checkbox</type>
    </CustomField>