force-app/main/default/objects/Product2/fields/Display_Seq_Number__c.field-meta.xml
<CustomField>
        <fullName>Display_Seq_Number__c</fullName>
        <label>Display Seq Number</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>