force-app/main/default/objects/Product2/fields/Do_Not_Roll_Up__c.field-meta.xml
<CustomField>
        <fullName>Do_Not_Roll_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxxDo Not Rollup</label>
        <type>Checkbox</type>
    </CustomField>