force-app/main/default/objects/Product2/fields/Document_Output_Bundle_Order_Number__c.field-meta.xml
<CustomField>
        <fullName>Document_Output_Bundle_Order_Number__c</fullName>
        <label>Document Output Bundle Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>