force-app/main/default/objects/Product2/fields/External_SKU_DH_2_0__c.field-meta.xml
<CustomField>
        <fullName>External_SKU_DH_2_0__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field contains a unique product identification code.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field contains a unique product identification code.</inlineHelpText>
        <label>External SKU (DH) 2.0</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>