force-app/main/default/objects/Product2/fields/External_SKU_DH__c.field-meta.xml
<CustomField>
        <fullName>External_SKU_DH__c</fullName>
        <description>external SKU numbers coming from D&amp;H</description>
        <label>External SKU (DH)</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>