force-app/main/default/objects/Product2/fields/ExternalId__c.field-meta.xml
<CustomField>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>