force-app/main/default/objects/Product2/fields/Family_group__c.field-meta.xml
<CustomField>
        <fullName>Family_group__c</fullName>
        <label>Family Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Almonde</fullName>
                </value>
                <value>
                    <fullName>Bankfusion</fullName>
                </value>
                <value>
                    <fullName>Bankmaster LAN</fullName>
                </value>
                <value>
                    <fullName>Branchpower</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>City Dealer</fullName>
                </value>
                <value>
                    <fullName>eBanking</fullName>
                </value>
                <value>
                    <fullName>Equation</fullName>
                </value>
                <value>
                    <fullName>Financial Messaging</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>KGR</fullName>
                </value>
                <value>
                    <fullName>Kondor+</fullName>
                </value>
                <value>
                    <fullName>KVAR</fullName>
                </value>
                <value>
                    <fullName>Loan IQ</fullName>
                </value>
                <value>
                    <fullName>Meridien</fullName>
                </value>
                <value>
                    <fullName>Midas</fullName>
                </value>
                <value>
                    <fullName>Multi-Product</fullName>
                </value>
                <value>
                    <fullName>Opics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Risk Vision</fullName>
                </value>
                <value>
                    <fullName>RV Analytics</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Sophis Risque</fullName>
                </value>
                <value>
                    <fullName>Sophis Value</fullName>
                </value>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Top Office</fullName>
                </value>
                <value>
                    <fullName>Trade Innovation</fullName>
                </value>
                <value>
                    <fullName>Trade Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>