force-app/main/default/objects/Product2/fields/For_Procurement__c.field-meta.xml
<CustomField>
        <fullName>For_Procurement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Procurement</label>
        <type>Checkbox</type>
    </CustomField>