force-app/main/default/objects/Product2/fields/Global_Services_Product_Type__c.field-meta.xml
<CustomField>
        <fullName>Global_Services_Product_Type__c</fullName>
        <label>Global Services Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>TCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>