force-app/main/default/objects/Product2/fields/GP_Product__c.field-meta.xml
<CustomField>
        <fullName>GP_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This identifies that this Product is a GP Product RBX-478, RBX-463</description>
        <inlineHelpText>This identifies that this Product is a GP Product</inlineHelpText>
        <label>GP Product</label>
        <type>Checkbox</type>
    </CustomField>