force-app/main/default/objects/Product2/fields/GS_Cost__c.field-meta.xml
<CustomField>
        <fullName>GS_Cost__c</fullName>
        <inlineHelpText>Value from this field twins to GS Cost Quote Line field</inlineHelpText>
        <label>GS Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>