force-app/main/default/objects/Product2/fields/GS_Service_Type__c.field-meta.xml
<CustomField>
        <fullName>GS_Service_Type__c</fullName>
        <label>Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>