force-app/main/default/objects/Product2/fields/GSS_Offering2__c.field-meta.xml
<CustomField>
        <fullName>GSS_Offering2__c</fullName>
        <description>Classes of GSS offerings (used to consolidate offering across Midas, Opics, etc. Misys products).</description>
        <label>GSS Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Integration Services</fullName>
                </value>
                <value>
                    <fullName>Optimisation Services</fullName>
                </value>
                <value>
                    <fullName>Premium Support</fullName>
                </value>
                <value>
                    <fullName>Upgrade Centre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>