force-app/main/default/objects/Product2/fields/GSS_Offering__c.field-meta.xml
<CustomField>
        <fullName>GSS_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE for products offered as one of the Global Services initiatives from FY08.</description>
        <label>GSS?</label>
        <type>Checkbox</type>
    </CustomField>