force-app/main/default/objects/Product2/fields/Headline__c.field-meta.xml
<CustomField>
        <fullName>Headline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headline</label>
        <type>Checkbox</type>
    </CustomField>