force-app/main/default/objects/Product2/fields/Hide_from_New_Sale__c.field-meta.xml
<CustomField>
        <fullName>Hide_from_New_Sale__c</fullName>
        <description>Search filter flag that hides product from selection on Net New quotes.</description>
        <formula>IF (Legacy_Product__c = TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Search filter flag that hides product from selection on Net New quotes.</inlineHelpText>
        <label>Hide from New Sale</label>
        <type>Text</type>
    </CustomField>