force-app/main/default/objects/Product2/fields/Include_Children__c.field-meta.xml
<CustomField>
        <fullName>Include_Children__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Children</label>
        <type>Checkbox</type>
    </CustomField>