force-app/main/default/objects/Product2/fields/Initial_Software_Delivery__c.field-meta.xml
<CustomField>
        <fullName>Initial_Software_Delivery__c</fullName>
        <label>Initial Software Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                    <default>true</default>
                    <label>Electronic</label>
                </value>
                <value>
                    <fullName>Tangible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>