force-app/main/default/objects/Product2/fields/IPR_Owner_Cognos__c.field-meta.xml
<CustomField>
        <fullName>IPR_Owner_Cognos__c</fullName>
        <label>IPR Owner Cognos</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>