force-app/main/default/objects/Product2/fields/IPR_Owner_Sun__c.field-meta.xml
<CustomField>
        <fullName>IPR_Owner_Sun__c</fullName>
        <label>IPR Owner Sun</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>