force-app/main/default/objects/Product2/fields/Is_Product_Complete__c.field-meta.xml
<CustomField>
        <fullName>Is_Product_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Complete</label>
        <type>Checkbox</type>
    </CustomField>