force-app/main/default/objects/Product2/fields/Is_RLF_Asset__c.field-meta.xml
<CustomField>
        <fullName>Is_RLF_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is RLF Asset</label>
        <type>Checkbox</type>
    </CustomField>