force-app/main/default/objects/Product2/fields/IsAsset__c.field-meta.xml
<CustomField>
        <fullName>IsAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this product be converted to a client asset during the asset creation process?</inlineHelpText>
        <label>IsAsset</label>
        <type>Checkbox</type>
    </CustomField>