force-app/main/default/objects/Product2/fields/Item_Type__c.field-meta.xml
<CustomField>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Inventory (Sales only)</fullName>
                </value>
                <value>
                    <fullName>Non-Inventory</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>