force-app/main/default/objects/Product2/fields/Legacy_Product__c.field-meta.xml
<CustomField>
        <fullName>Legacy_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates if this is a Legacy Product. Legacy Products can only be sold to existing customers and are hidden on Net New quotes.</description>
        <inlineHelpText>Checkbox that indicates if this is a Legacy Product. Legacy Products can only be sold to existing customers and are hidden on Net New quotes.</inlineHelpText>
        <label>Legacy Product?</label>
        <type>Checkbox</type>
    </CustomField>