force-app/main/default/objects/Product2/fields/Legacy_Product_Number__c.field-meta.xml
<CustomField>
        <fullName>Legacy_Product_Number__c</fullName>
        <description>This is the unique identifier to reference the legacy product</description>
        <inlineHelpText>This is the unique identifier to reference the legacy product</inlineHelpText>
        <label>Legacy Product Number</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>