force-app/main/default/objects/Product2/fields/Legacy_Product_Selection__c.field-meta.xml
<CustomField>
        <fullName>Legacy_Product_Selection__c</fullName>
        <description>Used to define Legacy Products in Selection Filters.</description>
        <inlineHelpText>Used to define Legacy Products in Selection Filters.</inlineHelpText>
        <label>Legacy Product Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>