force-app/main/default/objects/Product2/fields/Legacy_Source__c.field-meta.xml
<CustomField>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>