force-app/main/default/objects/Product2/fields/Licence_Metric_Driver__c.field-meta.xml
<CustomField>
        <fullName>Licence_Metric_Driver__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Licence Metric Driver</inlineHelpText>
        <label>Licence Metric Driver</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>