force-app/main/default/objects/Product2/fields/License_Metric__c.field-meta.xml
<CustomField>
    <fullName>License_Metric__c</fullName>
    <description>This field contains the License Metric for the Product.</description>
    <inlineHelpText>This field contains the License Metric for the Product.</inlineHelpText>
    <label>License Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>License_Metrics</valueSetName>
    </valueSet>
</CustomField>