force-app/main/default/objects/Product2/fields/Maintenance_First_Year_Product__c.field-meta.xml
<CustomField>
        <fullName>Maintenance_First_Year_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance First Year Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </CustomField>