force-app/main/default/objects/Product2/fields/Maintenance_Recurring_Product__c.field-meta.xml
<CustomField>
        <fullName>Maintenance_Recurring_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance Recurring Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Maintenance Recurring Product)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </CustomField>