force-app/main/default/objects/Product2/fields/MortgageBot_Pricing__c.field-meta.xml
<CustomField>
    <fullName>MortgageBot_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the checkbox is True, this product contains MortgageBot unique pricing.</description>
    <inlineHelpText>When the checkbox is True, this product contains MortgageBot unique pricing.</inlineHelpText>
    <label>MortgageBot Pricing</label>
    <type>Checkbox</type>
</CustomField>