force-app/main/default/objects/Product2/fields/New_Product_Name__c.field-meta.xml
<CustomField>
        <fullName>New_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Migration purposes - shows the new product name (for Netsuite).</description>
        <inlineHelpText>Migration purposes - shows the new product name (for Netsuite).</inlineHelpText>
        <label>New_Product_Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (New_Product_Name)</relationshipLabel>
        <relationshipName>Products4</relationshipName>
        <type>Lookup</type>
    </CustomField>