force-app/main/default/objects/Product2/fields/New_Product_Name_UPID__c.field-meta.xml
<CustomField>
        <fullName>New_Product_Name_UPID__c</fullName>
        <formula>New_Product_Name__r.UPID__c</formula>
        <label>New Product Name UPID</label>
        <type>Text</type>
    </CustomField>