force-app/main/default/objects/Product2/fields/Non_GS_Cost__c.field-meta.xml
<CustomField>
        <fullName>Non_GS_Cost__c</fullName>
        <description>This field contains the cost associated to Non-Global Services products.</description>
        <inlineHelpText>This field contains the cost associated to Non-Global Services products.</inlineHelpText>
        <label>Non-GS Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>