force-app/main/default/objects/Product2/fields/One_Time_Delivery__c.field-meta.xml
<CustomField>
        <fullName>One_Time_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Delivery</label>
        <type>Checkbox</type>
    </CustomField>