force-app/main/default/objects/Product2/fields/Pass_Through_Product__c.field-meta.xml
<CustomField>
        <fullName>Pass_Through_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass Through Product</label>
        <type>Checkbox</type>
    </CustomField>