force-app/main/default/objects/Product2/fields/Price_Rule_Identifier__c.field-meta.xml
<CustomField>
        <fullName>Price_Rule_Identifier__c</fullName>
        <label>Price Rule Identifier</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>