force-app/main/default/objects/Product2/fields/Pricing_Glossary__c.field-meta.xml
<CustomField>
        <fullName>Pricing_Glossary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this product has a pricing glossary and all pricing information is sourced from the Pricing Glossary custom object</description>
        <inlineHelpText>Indicates that this product has a pricing glossary and all pricing information is sourced from the Pricing Glossary custom object</inlineHelpText>
        <label>Pricing Glossary</label>
        <type>Checkbox</type>
    </CustomField>