force-app/main/default/objects/Product2/fields/Prod18CharId_c__c.field-meta.xml
<CustomField>
        <fullName>Prod18CharId_c__c</fullName>
        <label>Prod18CharId__c</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>