force-app/main/default/objects/Product2/fields/ProdAnalysisCodes__c.field-meta.xml
<CustomField>
        <fullName>ProdAnalysisCodes__c</fullName>
        <label>ProdAnalysisCodes</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>