force-app/main/default/objects/Product2/fields/ProdType__c.field-meta.xml
<CustomField>
        <fullName>ProdType__c</fullName>
        <label>ProdType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProdType</valueSetName>
        </valueSet>
    </CustomField>